# Flappy-Bird

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/laud/ripoll/flappybird/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Application.cpp  Application.h  Character.cpp  Character.h  Collider.cpp  Collider.h  Module.h  ModuleCollision.cpp  ModuleCollision.h  ModuleMainScene.cpp  ModuleMainScene.h  ModuleRenderer.cpp  ModuleRenderer.h  Shapes.h  Tube.cpp  Tube.h
app/src/main/java/laud/ripoll/flappybird/: FlappyBirdActivity.java  FlappyBirdLib.java  FlappyBirdView.java
app/src/test/java/laud/ripoll/flappybird/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
